# AngaWatch-Greenhouse

./: .editorconfig  .env.example  .gitattributes  .gitignore  .vercelignore  DEMO.md  Makefile  NOTES.md  README.md  docker-compose.yml  make.ps1  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_timescale_hypertable.py
backend/app/: __init__.py  main.py
backend/app/alerting/: __init__.py  base.py  dispatcher.py  tasks.py  ussd.py
backend/app/alerting/adapters/: __init__.py  console.py  sms_africastalking.py  whatsapp_meta.py
backend/app/alerting/templates/: __init__.py  messages.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routers/: alerts.py  auth.py  billing.py  control.py  devices.py  farms.py  greenhouses.py  organizations.py  readings.py  recommendations.py  records.py  risk.py  ussd.py  weather.py  whatsapp.py
backend/app/api/schemas/: __init__.py  alerts.py  auth.py  billing.py  common.py  control.py  device.py  farm.py  greenhouse.py  org.py  reading.py  recommendations.py  records.py  risk.py  weather.py
backend/app/billing/: __init__.py  base.py  mpesa.py  providers.py  service.py  tasks.py
backend/app/control/: __init__.py  automation.py  base.py  ingest.py  service.py
backend/app/control/drivers/: __init__.py  mock.py  mqtt_relay.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  billing.py  commerce.py  common.py  control.py  crop.py  device.py  farm.py  finance.py  intelligence.py  organization.py  reading.py  records.py  weather.py
backend/app/ingestion/: __init__.py  consumer.py  writer.py
backend/app/risk_engine/: __init__.py  base.py  defaults.py  engine.py  tasks.py
backend/app/risk_engine/models/: __init__.py  blight.py  microclimate.py  nutrient.py  tuta.py  water.py
backend/app/schemas/: common.py  telemetry.py
backend/app/seed/: __init__.py  constants.py  demo.py  seed.py
backend/app/weather/: __init__.py  base.py  providers.py  service.py  tasks.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_alerting.py  test_api_core.py  test_api_intel.py  test_billing.py  test_control.py  test_control_loop.py  test_demo_flow.py  test_ingestion.py  test_integration_api_smoke.py  test_integration_billing_gate.py  test_integration_ingest_to_alert.py  test_risk_blight.py  test_risk_engine_db.py  test_risk_models.py  test_weather.py
docs/: CONTRACT.md  api.md  architecture.md  data-model.md  firmware.md  hardware-integration.md  risk-models.md
firmware/: .gitignore  README.md  platformio.ini
firmware/include/: config.h  secrets.h.example  thresholds.h
firmware/lib/: README.md
firmware/src/: lora.cpp  lora.h  main.cpp  main_wifi.cpp  sensors.cpp  sensors.h
gateway/: Dockerfile  README.md  pyproject.toml
gateway/gateway/: __init__.py  config.py  forwarder.py  run.py  store.py
gateway/tests/: test_store.py
infra/mosquitto/: mosquitto.conf
infra/postgres/init/: 01-timescaledb.sql
scripts/: dev_broker.py  esp_emulator.py  verify_loop.py
simulator/: Dockerfile  README.md  pyproject.toml
simulator/simulator/: __init__.py  config.py  node.py  publisher.py  run.py
simulator/simulator/scenarios/: __init__.py  blight_dusk.py  heat_stress.py  leak.py  normal.py  nutrient_depletion.py  offline.py  pest_surge.py
simulator/tests/: conftest.py  test_scenarios.py
web/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ActuatorControls.tsx  AlertRow.tsx  DeviceHealthList.tsx  GreenhouseCard.tsx  LatestValues.tsx  PageHeader.tsx  ReadingsChart.tsx  RiskPanel.tsx
web/src/context/: AuthContext.tsx  ThemeProvider.tsx
web/src/hooks/: useAlerts.ts  useBilling.ts  useControl.ts  useDevices.ts  useFarms.ts  useGreenhouses.ts  useOrganization.ts  useReadings.ts  useRecommendations.ts  useRisk.ts  useWeather.ts
(+27 files in other folders)
