[project]
name = "angawatch-backend"
version = "0.1.0"
description = "AngaWatch Greenhouse — ingestion, agronomic risk engine, alerting, control, billing, API."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4's bcrypt backend probe reads bcrypt.__about__.__version__
    # (removed in bcrypt 4.1+) and sends a >72-byte test password, so bcrypt
    # 4.1+/5.x makes hash_password raise "password cannot be longer than 72 bytes".
    # Pin below 4.1 until passlib ships a release that handles the newer backend.
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "paho-mqtt>=2.1",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "faker>=25.0",
    "ruff>=0.4",
    "black>=24.4",
    "respx>=0.21",
    "amqtt>=0.11",  # Dockerless local MQTT broker for the hardware-loop dev/test (scripts/dev_broker.py)
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

# Note: flake8-type-checking (TC/TCH) is intentionally NOT enabled. SQLAlchemy 2.0
# resolves `Mapped[...]` annotations at runtime (via the module namespace) and
# FastAPI resolves dependency/response annotations at runtime, so moving those
# imports under `if TYPE_CHECKING` would break mapper configuration and DI.
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008", "UP046"]  # B008: FastAPI Depends() idiom; UP046: keep Generic[T] for pydantic compat

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/seed/*", "*/__init__.py"]
