[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angawatch-simulator"
version = "0.1.0"
description = "AngaWatch greenhouse device simulator — publishes realistic sensor telemetry over MQTT."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "paho-mqtt>=2.0,<3.0",
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
angawatch-sim = "simulator.run:main"

[tool.setuptools]
packages = ["simulator", "simulator.scenarios"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
